# SHEAIA

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
.agent/workflows/: brainstorming.md  executing-plans.md  superpowers.md  systematic-debugging.md  test-driven-development.md  writing-plans.md
config/: settings.example.yaml
docs/plans/: 2026-01-07-sheaia-platform-design.md
sheaia/: __init__.py  cli.py
sheaia/agents/: __init__.py
sheaia/api/: __init__.py  main.py
sheaia/api/routes/: chat.py  health.py
sheaia/bots/: __init__.py
sheaia/config/: __init__.py  settings.py
sheaia/core/: __init__.py  embedding.py  llm.py
sheaia/i18n/: __init__.py  prompts.py
sheaia/knowledge/: __init__.py
tests/: __init__.py  test_api.py  test_config.py  test_i18n.py
